# feesync

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  setup.sh
examples/SCSCL/FeedBack/: FeedBack.cpp
examples/SCSCL/Ping/: Ping.cpp
examples/SMS_STS/Broadcast/: Broadcast.cpp
examples/SMS_STS/FeedBack/: FeedBack.cpp
examples/SMS_STS/Ping/: Ping.cpp
examples/SMS_STS/SyncWritePos/: SyncWritePos.cpp
include/: CMakeLists.txt  Feetech.hpp  SCS.h  SCSCL.h  SCSerial.h  SCServo.h  SMSBL.h  SMSCL.h  SMS_STS.h  types.h
src/: CMakeLists.txt  Feetech.cpp  SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  SMS_STS.cpp
